# yxsplot

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml  sync-to-gitee.yml
examples/: example_1.py  example_2.py  example_3.py
src/yxsplot/: __init__.py  core.py
src/yxsplot/examples/: example_1.py  example_3.py  example_4.py
